pamc/src/tests/sample_code/should_fail/scope/ref_variant_in_variant_param_type.ph
type U(T: Type, t: T) {}

type Bar {
    .D(n: U(Bar, Bar.D)): Bar,
}
